[package]
name = "resource-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"

# Adapters
## HTTP
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }

## Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.0", features = ["full"] }

## Monitor
sysinfo = "0.29"

# Shared
config = "0.13"
tracing = "0.1"
http = "0.2.12"
env_logger = "0.11.6"
log = "0.4.26"
async-trait = "0.1.86"